--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,40 @@
     box-sizing: border-box;
     padding: 0;
 }
+body{
+    background-color: rgb(6, 6, 79);
+}
 
 .center-align{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+/*Reusable🫡*/
+.label-style{
+    background-color: green;
+    width: fit-content;
+}
+.buton-style{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    padding: 1px;
+}
 
+
+/*Starting screen styling*/
 .gameboard9{
 display: grid;
 grid-template-columns: repeat(3,150px);
 }
+.gameboard18{
+    display: grid;
+    grid-template-columns:repeat(6,100px);
+    grid-template-rows:repeat(3,100px);
+    gap: 25px;
+    width :725px;
+    background-color: red;
+}
+
