added styling and some divs

--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,56 @@
-*{
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
 }
-body{
-    background-color: rgb(6, 6, 79);
-}
-
-.center-align{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-/*Reusable🫡*/
-.label-style{
-    background-color: green;
-    width: fit-content;
-}
-.buton-style{
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    text-align: center;
-    padding: 1px;
+body {
+  background-color: rgb(8, 8, 43);
 }
 
+.center-align {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*Reusable*/
+.startSection{
+    background-color: red;
+    margin-top: 45%;
+    height: fit-content;
+}
+.header{
+    font-size: 60px;
+}
+.diffSetting{font-size: 40px;}
+.diffChoose{font-size: 35px;}
+.label-style {
+  background-color: green;
+  width: fit-content;
+  margin: 3px;
+  padding: 2px;
+}
+.buton-style {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  padding: 1px;
+  font-size: 35px;
+}
 
 /*Starting screen styling*/
-.gameboard9{
-display: grid;
-grid-template-columns: repeat(3,150px);
+.gameboard9 {
+  display: grid;
+  grid-template-columns: repeat(3, 150px);
+  grid-template-rows: repeat(3, 250px);
+  gap: 25px;
+  background-color: red;
 }
-.gameboard18{
-    display: grid;
-    grid-template-columns:repeat(6,100px);
-    grid-template-rows:repeat(3,100px);
-    gap: 25px;
-    width :725px;
-    background-color: red;
-}
+.gameboard18 {
+  display: grid;
+  grid-template-columns: repeat(6, 150px);
+  grid-template-rows: repeat(3, 250px);
+  gap: 25px;
 
+  background-color: rgba(23, 33, 78, 0.616);
+}
