--- a/styles.css
+++ b/styles.css
@@ -15,19 +15,32 @@ body {
 /*Reusable*/
 .startSection{
     background-color: red;
-    margin-top: 45%;
-    height: fit-content;
+    margin-top: 12%;
+    
+    
+}
+.skryty{
+    opacity: 0;
+    position: absolute;
 }
 .header{
     font-size: 60px;
 }
-.diffSetting{font-size: 40px;}
-.diffChoose{font-size: 35px;}
+.diffSetting{font-size: 40px;
+}
+.diffChoose{font-size: 35px;
+}
 .label-style {
-  background-color: green;
-  width: fit-content;
-  margin: 3px;
+  background-color: rgb(0, 132, 0);
+  width: 105px;
+  margin-top:10px;
   padding: 2px;
+  text-align: center;
+}
+
+.label-style:active{color: wheat;}
+.label-style:hover{
+    background-color: rgb(157, 164, 157);
 }
 .buton-style {
   display: flex;
