--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-/*Reusable*/
+/*Reusable HAA*/
 .startSection{
     background-color: red;
     margin-top: 12%;
