--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
   grid-template-columns: repeat(6,172px);
   grid-template-rows: repeat(6, 172px);
   gap: 25px;
+  margin: 10px;
   background-color: rgba(23, 33, 78, 0.616);
 }
 .gameboard27 {
@@ -123,10 +124,23 @@ body {
   text-align: center;
   transform: rotateY(180deg);
 }
-img{
-  background-color: #000;
-  width: 225px;
-  height: 225px
+.img150{
+  overflow: hidden;
+  min-width: 150px;
+  min-height: 150px;
+  background-color: #000; 
+}
+.img175{
+  overflow: hidden;
+  min-width: 172px;
+  min-height: 172px;
+  background-color: #000; 
+}
+.img250{
+  overflow: hidden;
+  min-width: 225px;
+  min-height: 225px;
+  background-color: #000; 
 }
 
 
