--- a/media-querry.css
+++ b/media-querry.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1920px){
+@media only screen and (max-width: 1920px){ /* smaller desktop*/
     /*Starting screen styling*/
 
 .gameboard9 {
@@ -17,7 +17,6 @@
     background-color: rgba(23, 33, 78, 0.616);
   }
   .gameboard27 {
-    display: grid;
     grid-template-columns: repeat(9, 140px);
     grid-template-rows: repeat(6, 140px);
     gap: 10px;
@@ -25,21 +24,52 @@
   }
   /*images classes*/
   .img150{
-    overflow: hidden;
     min-width: 140px;
     min-height: 140px;
-    background-color: #000; 
   }
   .img175{
-    overflow: hidden;
     min-width: 160px;
     min-height: 160px;
-    background-color: #000; 
   }
   .img250{
-    overflow: hidden;
     min-width: 200px;
     min-height: 200px;
-    background-color: #000; 
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .gameboard9 {
+    display: grid;
+    grid-template-columns: repeat(5, 180px);
+    grid-template-rows: repeat(4, 180px);
+    gap: 15px;
+    background-color: rgba(23, 33, 78, 0.616);
+  }
+  .gameboard18 {
+    display: grid;
+    grid-template-columns: repeat(6,120px);
+    grid-template-rows: repeat(6, 120px);
+    gap: 7px;
+    margin: 10px;
+    
+  }
+  .gameboard27 {
+    grid-template-columns: repeat(9, 100px);
+    grid-template-rows: repeat(6, 100px);
+    gap: 10px;
+    
+  }
+  /*images classes*/
+  .img150{
+    min-width: 100px;
+    min-height: 100px;
+  }
+  .img175{
+    min-width: 120px;
+    min-height: 120px;
+  }
+  .img250{
+    min-width: 180px;
+    min-height: 180px;
   }
 }
