--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
   padding: 0;
 }
 body {
-  background-color: rgb(8, 8, 43);
+  background-color: #08082b;
+  height: 980px;
 }
 
 .center-align {
@@ -171,13 +172,37 @@ body {
 
 
 /* game cards předek a zadek*/
-.playerSection{
+
+#playerSection{
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  right: 80%;
+  top: 2%;
+  width: 100px ;
+  height: 100px;
+  background-color: aqua;
+  padding: 5px;
+}
+#playerSection2{
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  left: 80%;
+  top: 2%;
   width: 100px ;
   height: 100px;
   background-color: aqua;
   padding: 5px;
 }
 .player1{
+  margin: 2px;
+  font-size: large;
+  text-align: center;
+}
+.player2{
   margin: 2px;
   font-size: large;
   text-align: center;
