Add new CSS classes and update navbar styles

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,10 @@ body {
   align-items: center;
 }
 /*Reusable HAA*/
+.NavButton{
+  transition: all 0.5s ease;
+}
+/*Navbar*/
 .startSection{
     background-color: red;
 }
