--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,6 +11,8 @@ body {
   background-color: #08082b;
   height: 980px;
 }
+
+
 .font-setter{
   font-family: 'Playpen Sans', sans-serif;
 }
@@ -28,6 +30,11 @@ body {
 /*Reusable HAA*/
 .NavButton{
   transition: all 0.5s ease;
+  background-image: none;
+}
+.NavButton:hover{
+  background-color: #fdba74;
+  scale: 1.05;
 }
 /*Navbar*/
 .startSection{
@@ -42,9 +49,7 @@ body {
 }
 .diffSetting{font-size: 40px;
 }
-.lineheight{
-    height: 50px;
-}
+
 .diffChoose{font-size: 35px;
 }
 .label-style {
