--- a/CSS/output.css
+++ b/CSS/output.css
@@ -540,8 +540,44 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.relative {
+  position: relative;
+}
+
+.top-2\/3 {
+  top: 66.666667%;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-3\/4 {
+  top: 75%;
+}
+
+.top-1\/4 {
+  top: 25%;
+}
+
+.top-2\/4 {
+  top: 50%;
+}
+
 .m-9 {
   margin: 2.25rem;
+}
+
+.m-1 {
+  margin: 0.25rem;
 }
 
 .my-1 {
@@ -549,8 +585,8 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.block {
-  display: block;
+.mt-auto {
+  margin-top: auto;
 }
 
 .flex {
@@ -565,10 +601,6 @@ video {
   display: none;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
 .h-11 {
   height: 2.75rem;
 }
@@ -578,12 +610,32 @@ video {
   width: fit-content;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-1 {
   width: 0.25rem;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -598,8 +650,24 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-2 {
@@ -631,104 +699,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\.\/images\/PexesoBG\.jpg\'\)\] {
-  background-image: url('./images/PexesoBG.jpg');
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
-
-.bg-\[url\(\'images\\PexesoBG\.jpg\'\)\] {
-  background-image: url('images\PexesoBG.jpg');
-}
-
-.bg-\[url\(\'C\:\\Users\\matej\\simplePexesoGame\\images\\img27\.png\'\)\] {
-  background-image: url('C:\Users\matej\simplePexesoGame\images\img27.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\img27\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\img27.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\img2\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\img2.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\img\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\img.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\im\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\im.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\i\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\i.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\p\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\p.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\pe\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\pe.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\pex\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\pex.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\pexe\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\pexe.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\pexes\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\pexes.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\P\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\P.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pe\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pe.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pex\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pex.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pexe\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pexe.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pexesp\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pexesp.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pexes\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pexes.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\Pexeso\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\Pexeso.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\PexesoB\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\PexesoB.png');
-}
-
-.bg-\[url\(\'simplePexesoGame\\images\\PexesoBG\.png\'\)\] {
-  background-image: url('simplePexesoGame\images\PexesoBG.png');
+.p-2 {
+  padding: 0.5rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.align-bottom {
+  vertical-align: bottom;
 }
 
 .text-2xl {
@@ -746,6 +731,21 @@ video {
   line-height: 1;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -754,7 +754,12 @@ video {
   font-weight: 500;
 }
 
-.text-violet-500 {
+.text-orange-400 {
   --tw-text-opacity: 1;
-  color: rgb(139 92 246 / var(--tw-text-opacity));
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
