--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,7 +71,7 @@ body {
   display: inline;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: 1040px;
   height: 100;
 }
 .centered {
